plugins {
    id 'java'
    id 'maven'
}

group 'com.github.dfauth'
version '1.0-SNAPSHOT'

sourceCompatibility = 11

repositories {
    mavenCentral()
}

test {
    useJUnit()
}

dependencies {
    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
    testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
    testImplementation 'junit:junit:4.13.1'
}
